# isapnptools

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  acconfig.h  aclocal.m4  configure  configure.in  makeDOSr.bat
.github/workflows/: makefile.yml
config-scripts/: YMH0021
demos/: Makefile.am  Makefile.in  demo.c  demo2.c
doc/: Makefile.am  Makefile.in  README.DOS  README.OS2  README.borland  README.ide  README.initrd  README.lib  README.modules  isapnp.8  isapnp.conf.5  isapnpfaq.txt  man2html  pnpdump.8
etc/: isapnp.gone
include/: Makefile.am  Makefile.in  config.bor  config.h.in
include/isapnp/: Makefile.am  Makefile.in  iopl.h
src/: Makefile.am  Makefile.in  callbacks.c  isapnp.c  isapnp_main.c  isapnp_main.l  mysnprtf.c  pnp-select.c  pnpdump_main.c  release.c  res-access.c  resource.c
test/: run_pnpdump_test.pl  run_tests.pl  testplan.txt
